--- a/flask_mysql/validation/dojo_survey/flask_app/templates/index.html
+++ b/flask_mysql/validation/dojo_survey/flask_app/templates/index.html
@@ -19,6 +19,7 @@
             <label for="name">Your Name:  </label><input type="text" name="name"><br><br>
             <label for="location">Dojo Location:  </label>
             <select name="location">
+                <option value="No Choice">-- Choose a Location --</option>
                 <option value="San Jose">San Jose</option>
                 <option value="Seattle">Seattle</option>
                 <option value="Chicago">Chicago</option>
@@ -28,6 +29,7 @@
             </select><br><br>
             <label for="language">Favorite Language:  </label>
             <select name="language">
+                <option value="No Choice">-- Choose a Language</option>
                 <option value="Python">Python</option>
                 <option value="JavaScript">JavaScript</option>
                 <option value="C##">C##</option>
@@ -36,7 +38,7 @@
                 <option value="CSS">CSS</option>
                 <option value="C">C</option>
             </select><br><br>
-            <label for="comment">Comment (optional):</label><br>
+            <label for="comment">Comment:</label><br>
             <textarea name="comment" rows="4" cols="50"></textarea><br>
             <input type="submit" value="Submit">
         </form><br>
